--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -165,28 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "2c3044c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "X = pd.read_csv(\"./data.csv\")"
+    "X = pd.read_csv(\"./data4.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "df78193c",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m32/32\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 939us/step\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -208,379 +201,100 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>Female</th>\n",
-       "      <th>Male</th>\n",
-       "      <th>Other</th>\n",
-       "      <th>bow_s1000</th>\n",
-       "      <th>bow_s1001</th>\n",
-       "      <th>bow_s1002</th>\n",
-       "      <th>bow_s1003</th>\n",
-       "      <th>bow_s1004</th>\n",
-       "      <th>bow_s1005</th>\n",
-       "      <th>...</th>\n",
-       "      <th>social_media_hours</th>\n",
-       "      <th>study_hours_per_day</th>\n",
-       "      <th>mental_health_rating</th>\n",
-       "      <th>attendance_percentage</th>\n",
-       "      <th>Bachelor</th>\n",
-       "      <th>High School</th>\n",
-       "      <th>Master</th>\n",
-       "      <th>No.1</th>\n",
-       "      <th>Yes.1</th>\n",
-       "      <th>prediction</th>\n",
+       "      <th>rainfall</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-2.418068</td>\n",
-       "      <td>8</td>\n",
-       "      <td>85</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>43.403561</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.281707</td>\n",
-       "      <td>8</td>\n",
-       "      <td>97</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>69.428490</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-1.464491</td>\n",
-       "      <td>1</td>\n",
-       "      <td>94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33.448315</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-1.736942</td>\n",
-       "      <td>1</td>\n",
-       "      <td>71</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30.605042</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>19</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.987566</td>\n",
-       "      <td>1</td>\n",
-       "      <td>90</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>32.293243</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>21</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.647139</td>\n",
-       "      <td>6</td>\n",
-       "      <td>77</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>48.329140</td>\n",
+       "      <th>725</th>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.442801</td>\n",
-       "      <td>6</td>\n",
-       "      <td>86</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>42.660103</td>\n",
+       "      <th>726</th>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-0.374688</td>\n",
-       "      <td>9</td>\n",
-       "      <td>61</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>48.381428</td>\n",
+       "      <th>727</th>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.260017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>42.455570</td>\n",
+       "      <th>728</th>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>19</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.510777</td>\n",
-       "      <td>8</td>\n",
-       "      <td>89</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>47.080391</td>\n",
+       "      <th>729</th>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 1025 columns</p>\n",
+       "<p>730 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     age  Female  Male  Other  bow_s1000  bow_s1001  bow_s1002  bow_s1003  \\\n",
-       "0     23       1     0      0          1          0          0          0   \n",
-       "1     20       1     0      0          0          1          0          0   \n",
-       "2     21       0     1      0          0          0          1          0   \n",
-       "3     23       1     0      0          0          0          0          1   \n",
-       "4     19       1     0      0          0          0          0          0   \n",
-       "..   ...     ...   ...    ...        ...        ...        ...        ...   \n",
-       "995   21       1     0      0          0          0          0          0   \n",
-       "996   17       1     0      0          0          0          0          0   \n",
-       "997   20       0     1      0          0          0          0          0   \n",
-       "998   24       0     1      0          0          0          0          0   \n",
-       "999   19       1     0      0          0          0          0          0   \n",
+       "     rainfall\n",
+       "0        True\n",
+       "1        True\n",
+       "2        True\n",
+       "3       False\n",
+       "4       False\n",
+       "..        ...\n",
+       "725      True\n",
+       "726      True\n",
+       "727      True\n",
+       "728      True\n",
+       "729      True\n",
        "\n",
-       "     bow_s1004  bow_s1005  ...  social_media_hours  study_hours_per_day  \\\n",
-       "0            0          0  ...                   1            -2.418068   \n",
-       "1            0          0  ...                   2             2.281707   \n",
-       "2            0          0  ...                   3            -1.464491   \n",
-       "3            0          0  ...                   3            -1.736942   \n",
-       "4            1          0  ...                   4             0.987566   \n",
-       "..         ...        ...  ...                 ...                  ...   \n",
-       "995          0          0  ...                   0            -0.647139   \n",
-       "996          0          0  ...                   1            -0.442801   \n",
-       "997          0          0  ...                   2            -0.374688   \n",
-       "998          0          0  ...                   4             1.260017   \n",
-       "999          0          0  ...                   2             0.510777   \n",
-       "\n",
-       "     mental_health_rating  attendance_percentage  Bachelor  High School  \\\n",
-       "0                       8                     85         0            0   \n",
-       "1                       8                     97         0            1   \n",
-       "2                       1                     94         0            1   \n",
-       "3                       1                     71         0            0   \n",
-       "4                       1                     90         0            0   \n",
-       "..                    ...                    ...       ...          ...   \n",
-       "995                     6                     77         0            1   \n",
-       "996                     6                     86         0            1   \n",
-       "997                     9                     61         1            0   \n",
-       "998                     1                    100         1            0   \n",
-       "999                     8                     89         1            0   \n",
-       "\n",
-       "     Master  No.1  Yes.1  prediction  \n",
-       "0         1     0      1   43.403561  \n",
-       "1         0     1      0   69.428490  \n",
-       "2         0     1      0   33.448315  \n",
-       "3         1     0      1   30.605042  \n",
-       "4         1     1      0   32.293243  \n",
-       "..      ...   ...    ...         ...  \n",
-       "995       0     0      1   48.329140  \n",
-       "996       0     0      1   42.660103  \n",
-       "997       0     0      1   48.381428  \n",
-       "998       0     1      0   42.455570  \n",
-       "999       0     1      0   47.080391  \n",
-       "\n",
-       "[1000 rows x 1025 columns]"
+       "[730 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p = model.predict(X.values)\n",
-    "X['prediction'] = p\n",
+    "X['rainfall'] = X['prediction'] > 0.5\n",
+    "X = X.drop('prediction', axis=1)\n",
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "aa14fa57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X.to_csv(\"result.csv\", index=False)"
+    "X.to_csv(\"result.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "565ee8d3",
    "metadata": {},
    "outputs": [],
